Fix menu button overflow. Mod about page.
css/header.sass
	-Fix menu button-text overflowed caused by narrow pages by
	specifying a `max-width` for each button `li`, such that they
	eventually spill over onto another row.

about/index.html, css/about.sass
	-Perfectionist changes to about-page text; decrease gap between
	menu header and body content.

--- a/css/about.sass
+++ b/css/about.sass
@@ -7,7 +7,7 @@ div#about
 	text-align: center
 
 	div
-		margin-top: 7%
+		margin-top: 2%
 		display: inline-block
 		vertical-align: top
 
