--- a/css/header.sass
+++ b/css/header.sass
@@ -12,7 +12,10 @@ div#header
 	padding-bottom: 20px
 
 	ul
+		text-align: center
+
 		li
 			display: inline-block
 			text-align: center
+			min-width: 60px
 			width: 100% / $numMenuItems
